gnome-online-accounts (3.22.0-1) UNRELEASED; urgency=medium

  * New upstream release.
  * Use non-multiarch path (/usr/lib/gnome-online-accounts) for libexecdir.
  * Update debian/libgoa-backend-1.0-1.symbols.

 -- Michael Biebl <biebl@debian.org>  Wed, 21 Sep 2016 21:37:26 +0200

gnome-online-accounts (3.21.91-1) unstable; urgency=medium

  * New upstream beta release.

 -- Michael Biebl <biebl@debian.org>  Fri, 02 Sep 2016 10:28:15 +0200

gnome-online-accounts (3.21.90-2) unstable; urgency=medium

  * Update Build-Depends:
    - Bump libglib2.0-dev to (>= 2.40).
    - Drop libdbus-glib-1-dev and libnotify-dev.
  * Upload to unstable.

 -- Michael Biebl <biebl@debian.org>  Thu, 01 Sep 2016 02:41:39 +0200

gnome-online-accounts (3.21.90-1) experimental; urgency=medium

  * New upstream beta release.
  * Update debian/libgoa-backend-1.0-1.symbols
    - several additions and two (unused) missing symbols:
      goa_util_add_account_info@Base 3.10.0
      goa_utils_delete_credentials_sync@Base 3.10.0

 -- Andreas Henriksson <andreas@fatal.se>  Fri, 19 Aug 2016 15:59:48 +0200

gnome-online-accounts (3.20.3-1) unstable; urgency=medium

  * New upstream release.
  * Update symbols file for libgoa-backend-1.0-1.

 -- Michael Biebl <biebl@debian.org>  Sun, 07 Aug 2016 18:37:33 +0200

gnome-online-accounts (3.20.2-1) unstable; urgency=medium

  * New upstream release.
  * Convert from cdbs to dh.
  * Pass --as-needed to dh_autoreconf to reduce runtime dependencies.

 -- Michael Biebl <biebl@debian.org>  Fri, 08 Jul 2016 14:15:38 +0200

gnome-online-accounts (3.20.1-1) unstable; urgency=medium

  * New upstream release.
  * Bump Build-Depends on libgtk-3-dev to (>= 3.19.12) as per configure.ac.
  * Update debian/libgoa-backend-1.0-1.symbols, add new goa_object_skeleton_*
    symbols.
  * Remove m4/glib-gettext.m4 via debian/clean. Otherwise autoreconf fails
    because the system-wide /usr/share/aclocal/glib-gettext.m4 was updated and